<resources>
    <string name="app_name">My Pet Agenda</string>
    <string name="title_home">Home</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_my_pets">My Pets</string>
    <string name="title_locations">Locations</string>
    <string name="add_new_pet">Add new pet</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="name">Name</string>
    <string name="breed_if_applicable">Breed (If applicable)</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="birthday">Birthday</string>
    <string name="kg">Kg</string>
    <string name="_22_04_2013">22/04/2013</string>
    <string name="add_pet">Add Pet</string>
    <string name="pet_image_transition">Pet image transition</string>
    <string name="pet_image">Pet image</string>
    <string name="your_pets_are_waiting_to_be_added">Your pets are waiting to be added!</string>
    <string name="add_me_image">Add me image</string>
    <string name="reminders">Reminders</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="fab_transition_to_view">fab transition to view</string>
    <string name="view_transitioned">view_transitioned</string>
    <string name="back_arrow">Back arrow</string>
    <string name="add_reminder">Add Reminder</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="day_s">Day(s)</string>
    <string name="title">Title</string>
    <string name="recurring">Recurring</string>
    <string name="cancel">Cancel</string>
    <string name="add_note">Add Note</string>
    <string name="please_insert_your_note">Please insert your note…</string>
    <string name="please_add_a_note">Please add a note!</string>
    <string name="are_you_sure_you_want_to_delete_note">Are you sure you want to delete this note?</string>
    <string name="are_you_sure_you_want_to_delete_reminder">Are you sure you want to delete this reminder?</string>
    <string name="are_you_sure_you_want_to_delete_pet">Are you sure you want to delete this pet?</string>
    <string name="delete">Delete</string>
    <string name="update_note">Update Note</string>
    <string name="note">Note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pet_id">PetId</string>
    <string name="close_camera">Close Camera</string>
    <string name="flash_on_off">Flash on/off</string>
    <string name="change_camera_button">Change Camera button</string>
    <string name="picture">Picture</string>
    <string name="navigate_to_previous_screen">Navigate to previous screen</string>
    <string name="take_photos_of_your_pets">Take photos of your pets.</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="image_container">Image Container</string>
    <string name="preview">Preview</string>
    <string name="pet_details">Pet Details</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="age_years">Age (years)</string>
    <string name="no_notes_to_display">No notes to display!</string>
    <string name="no_reminders_to_display">No reminders to display!</string>
    <string name="settings">Settings</string>
    <string name="reminder_channel_notification">Reminder Channel Notification</string>
    <string name="your_pet_needs_attention">Your pet needs your attention</string>
    <string name="dismiss">Dismiss</string>
    <string name="find_places_of_interest_for_your_pets_near_you">Find places of interest for your pets near you!</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="find_out_where_to_find_assistance_for_your_pet">Find out where to find assistance for your pet!</string>
    <string name="veterinarian_image">Veterinarian Image</string>
    <string name="pet_shops">Pet Shops</string>
    <string name="discover_shops_to_get_your_pet_a_treat">Discover shops to get your pet a treat!</string>
    <string name="grooming">Grooming</string>
    <string name="time_to_freshen_up_with_a_nice_grooming">Time to freshen up with a nice grooming.</string>
    <string name="who_fancies_a_nice_walk_in_the_park">Who fancies a nice walk in the park?</string>
    <string name="park">Park</string>
    <string name="park_image">Park Image</string>
    <string name="grooming_image">Grooming Image</string>
    <string name="pet_shop_image">Pet Shop Image</string>
    <string name="activities">Activities</string>
    <string name="veterinarian_visit">Veterinarian Visit</string>
    <string name="bath">Bath</string>
    <string name="vaccination">Vaccination</string>
    <string name="worm_treatment">Worm Treatment</string>
    <string name="flea_treatment">Flea Treatment</string>
</resources>