<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.map.MapFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_veterinarian"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_veterinarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/default_image"
                        android:contentDescription="@string/veterinarian_image" />

                    <LinearLayout
                        android:id="@+id/view_veterinarian"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:padding="@dimen/margin_8"
                        android:background="@color/app_primary">

                        <TextView
                            android:id="@+id/text_vet_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Card_Text_View"
                            android:layout_marginBottom="@dimen/margin_4"
                            android:text="@string/veterinarian"/>

                        <TextView
                            android:id="@+id/text_vet_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            style="@style/Card_Text_Subtitle"
                            android:text="@string/find_out_where_to_find_assistance_for_your_pet"/>
                    </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_pet_shops"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_pet_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/default_image"
                    android:contentDescription="@string/pet_shop_image" />

                <LinearLayout
                    android:id="@+id/linear_pet_shop"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_8"
                    android:background="@color/app_secondary">

                    <TextView
                        android:id="@+id/text_shop_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Card_Text_View"
                        android:layout_marginBottom="@dimen/margin_4"
                        android:text="@string/pet_shops"/>

                    <TextView
                        android:id="@+id/text_shop_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        style="@style/Card_Text_Subtitle"
                        android:text="@string/discover_shops_to_get_your_pet_a_treat"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_grooming"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_grooming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/default_image"
                    android:contentDescription="@string/grooming_image" />

                <LinearLayout
                    android:id="@+id/linear_grooming"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_8"
                    android:background="@color/app_primary_dark">

                    <TextView
                        android:id="@+id/text_grooming_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Card_Text_View"
                        android:layout_marginBottom="@dimen/margin_4"
                        android:text="@string/grooming"/>

                    <TextView
                        android:id="@+id/text_grooming_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        style="@style/Card_Text_Subtitle"
                        android:text="@string/time_to_freshen_up_with_a_nice_grooming"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_park"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_park"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/default_image"
                    android:contentDescription="@string/park_image" />

                <LinearLayout
                    android:id="@+id/linear_park"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_8"
                    android:background="@color/app_secondary_light">

                    <TextView
                        android:id="@+id/text_park_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Card_Text_View"
                        android:layout_marginBottom="@dimen/margin_4"
                        android:text="@string/park"/>

                    <TextView
                        android:id="@+id/text_park_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        style="@style/Card_Text_Subtitle"
                        android:text="@string/who_fancies_a_nice_walk_in_the_park"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_16"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </ScrollView>
</layout>