<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nunovalente.android.mypetagenda.ui.mypets.AddPetViewModel" />

        <variable
            name="breed"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_add_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/margin_16"
                android:visibility="invisible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activities.AddPetActivity">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar_pets"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/toolbar_pets_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/lobster_two"
                            android:text="@string/add_pet"
                            android:textColor="@color/app_primary"
                            android:textSize="@dimen/text_size_20" />

                    </androidx.appcompat.widget.Toolbar>
                </com.google.android.material.appbar.AppBarLayout>

                <ImageView
                    android:id="@+id/image_add_pet"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="@dimen/margin_80"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_80"
                    android:contentDescription="@string/pet_image"
                    android:src="@drawable/default_image_pet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

                <TextView
                    android:id="@+id/textChangeProfilePhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_80"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_80"
                    android:gravity="center"
                    android:text="@string/upload_picture"
                    android:textColor="@color/app_primary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_add_pet" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/type"
                    app:layout_constraintStart_toStartOf="@+id/spinner_my_pets"
                    app:layout_constraintTop_toBottomOf="@+id/textChangeProfilePhoto" />

                <Spinner
                    android:id="@+id/spinner_my_pets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:entries="@array/animal_type"
                    android:gravity="center"
                    android:padding="@dimen/margin_8"
                    app:layout_constraintEnd_toStartOf="@+id/edit_pet_weight"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:stateValue="@{viewModel.pet.type}" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/birthday"
                    app:layout_constraintStart_toStartOf="@+id/edit_pet_birthday"
                    app:layout_constraintTop_toBottomOf="@+id/textChangeProfilePhoto" />

                <EditText
                    android:id="@+id/edit_pet_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:autofillHints="@string/_22_04_2013"
                    android:background="@drawable/date_edit_text_drawable"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/_22_04_2013"
                    android:padding="@dimen/margin_8"
                    android:text="@={viewModel.pet.birthday}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/edit_pet_weight"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_pet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_pet_birthday">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name_pet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@={viewModel.pet.name}"
                        android:hint="@string/name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_pet_breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_pet_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_breed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@={viewModel.pet.breed}"
                        android:hint="@string/breed_if_applicable"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/add_pet_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_80"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_80"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:onClick="@{() -> viewModel.savePetToDb()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_layout_pet_breed" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:text="@string/weight"
                    app:layout_constraintBottom_toTopOf="@+id/edit_pet_weight"
                    app:layout_constraintStart_toStartOf="@+id/edit_pet_weight"
                    app:layout_constraintTop_toBottomOf="@+id/textChangeProfilePhoto" />

                <EditText
                    android:id="@+id/edit_pet_weight"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/margin_8"
                    android:autofillHints="@string/kg"
                    android:background="@drawable/date_edit_text_drawable"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/kg"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/margin_8"
                    android:text="@={viewModel.pet.weight}"
                    app:layout_constraintEnd_toStartOf="@+id/edit_pet_birthday"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/spinner_my_pets"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </ScrollView>
</layout>